// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 2: cirno import <fixtures>/foo 1`] = `
{
  "code": 0,
  "entries": [
    {
      "entries": [
        {
          "entries": [],
          "name": "cache",
          "type": "directory",
        },
        {
          "entries": [],
          "name": "releases",
          "type": "directory",
        },
      ],
      "name": ".yarn",
      "type": "directory",
    },
    {
      "content": "version: '1.0'
instances:
  - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "name": "cirno.yml",
      "type": "file",
    },
    {
      "entries": [
        {
          "entries": [
            {
              "entries": [
                {
                  "entries": [
                    {
                      "name": ".gitignore",
                      "type": "file",
                    },
                  ],
                  "name": "cache",
                  "type": "directory",
                },
                {
                  "name": "install-state.gz",
                  "type": "file",
                },
                {
                  "entries": [
                    {
                      "name": "yarn-4.3.1.cjs",
                      "type": "file",
                    },
                  ],
                  "name": "releases",
                  "type": "directory",
                },
              ],
              "name": ".yarn",
              "type": "directory",
            },
            {
              "name": ".yarnrc.yml",
              "type": "file",
            },
            {
              "entries": [
                {
                  "name": ".yarn-state.yml",
                  "type": "file",
                },
              ],
              "name": "node_modules",
              "type": "directory",
            },
            {
              "name": "package.json",
              "type": "file",
            },
            {
              "name": "yarn.lock",
              "type": "file",
            },
          ],
          "name": "cd5fbb72-8243-5ccf-b8ca-ceee993585f7",
          "type": "directory",
        },
      ],
      "name": "instances",
      "type": "directory",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully imported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7.
",
}
`;

exports[`step 3: cirno export <#1> <exports>/foo.zip 1`] = `
{
  "code": 0,
  "entries": [
    {
      "entries": [
        {
          "entries": [],
          "name": "cache",
          "type": "directory",
        },
        {
          "entries": [],
          "name": "releases",
          "type": "directory",
        },
      ],
      "name": ".yarn",
      "type": "directory",
    },
    {
      "content": "version: '1.0'
instances:
  - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "name": "cirno.yml",
      "type": "file",
    },
    {
      "entries": [
        {
          "entries": [
            {
              "entries": [
                {
                  "entries": [
                    {
                      "name": ".gitignore",
                      "type": "file",
                    },
                  ],
                  "name": "cache",
                  "type": "directory",
                },
                {
                  "name": "install-state.gz",
                  "type": "file",
                },
                {
                  "entries": [
                    {
                      "name": "yarn-4.3.1.cjs",
                      "type": "file",
                    },
                  ],
                  "name": "releases",
                  "type": "directory",
                },
              ],
              "name": ".yarn",
              "type": "directory",
            },
            {
              "name": ".yarnrc.yml",
              "type": "file",
            },
            {
              "entries": [
                {
                  "name": ".yarn-state.yml",
                  "type": "file",
                },
              ],
              "name": "node_modules",
              "type": "directory",
            },
            {
              "name": "package.json",
              "type": "file",
            },
            {
              "name": "yarn.lock",
              "type": "file",
            },
          ],
          "name": "cd5fbb72-8243-5ccf-b8ca-ceee993585f7",
          "type": "directory",
        },
      ],
      "name": "instances",
      "type": "directory",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully exported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7 to /exports/foo.zip.
",
}
`;

exports[`step 4: cirno remove <#1> 1`] = `
{
  "code": 0,
  "entries": [
    {
      "entries": [
        {
          "entries": [],
          "name": "cache",
          "type": "directory",
        },
        {
          "entries": [],
          "name": "releases",
          "type": "directory",
        },
      ],
      "name": ".yarn",
      "type": "directory",
    },
    {
      "content": "version: '1.0'
instances: []
",
      "name": "cirno.yml",
      "type": "file",
    },
    {
      "entries": [],
      "name": "instances",
      "type": "directory",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7 is successfully removed.
",
}
`;

exports[`step 5: cirno import <exports>/foo.zip 1`] = `
{
  "code": 0,
  "entries": [
    {
      "entries": [
        {
          "entries": [],
          "name": "cache",
          "type": "directory",
        },
        {
          "entries": [],
          "name": "releases",
          "type": "directory",
        },
      ],
      "name": ".yarn",
      "type": "directory",
    },
    {
      "content": "version: '1.0'
instances:
  - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
    name: unnamed
    created: '<timestamp>'
    updated: '<timestamp>'
",
      "name": "cirno.yml",
      "type": "file",
    },
    {
      "entries": [
        {
          "entries": [
            {
              "entries": [
                {
                  "entries": [
                    {
                      "name": ".gitignore",
                      "type": "file",
                    },
                  ],
                  "name": "cache",
                  "type": "directory",
                },
                {
                  "name": "install-state.gz",
                  "type": "file",
                },
                {
                  "entries": [
                    {
                      "name": "yarn-4.3.1.cjs",
                      "type": "file",
                    },
                  ],
                  "name": "releases",
                  "type": "directory",
                },
              ],
              "name": ".yarn",
              "type": "directory",
            },
            {
              "name": ".yarnrc.yml",
              "type": "file",
            },
            {
              "entries": [
                {
                  "name": ".yarn-state.yml",
                  "type": "file",
                },
              ],
              "name": "node_modules",
              "type": "directory",
            },
            {
              "name": "package.json",
              "type": "file",
            },
            {
              "name": "yarn.lock",
              "type": "file",
            },
          ],
          "name": "5ab7bff9-d000-5c3b-83ac-4c3c4296ee19",
          "type": "directory",
        },
      ],
      "name": "instances",
      "type": "directory",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully imported instance 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19.
",
}
`;
